# SWIM

./: .gitignore  CLAUDE.md  README.md  parse_summary.py  parse_tables.py
.claude/: plugins.json  settings.local.json
.claude/skills/plugin-1773373396780/: SKILL.md
.kilocode/rules/: CLAUDE.md
Codes/: Experiment_SI_Analysis.py
Codes/Computational Neural Dynamic Modeling/: plot_neural_dynamics_figures.py  plot_supp1_figures.py
Codes/Experiment 1/: run_experiment.bat
Codes/Experiment 1/Analysis/: Clarity_detailed_results.json  Clarity_win_matrix.csv  Correlation_Source_Data.csv  Experiment1_overall_detailed_results.json  Intensity_detailed_results.json  Intensity_win_matrix.csv  analyze_results.py  correlation_analysis.py
Codes/Experiment 1/Code/: SWIM_Experiment_1.spec  experiment_logic.py  gui.py  main.py  umh_controller.py
Codes/Simulation 1/: visualize_experiment1.py
Codes/Stroboscopic 2D DIC/: .gitignore  README.md  pyproject.toml
Codes/Stroboscopic 2D DIC/config/: V1.yaml  example.yaml
Codes/Stroboscopic 2D DIC/dic/: __init__.py  acceleration.py  analysis.py  calibration.py  capture.py  cli.py  config.py  dic_core.py  gui_common.py  io_utils.py  pipeline.py  preprocess.py  roi_configurator.py  types.py  visualization.py
Codes/Stroboscopic 2D DIC/outputs/calibration/: camera_calibration.json
Codes/Stroboscopic 2D DIC/swim_stroboscopic_dic.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
Text/: Manuscript.tex  SWIM.bib  SWIM_with_note (do not citaion this).bib  Supplementary-Information.tex  sn-nature.bst
(+110 files in other folders)
