[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swim-stroboscopic-dic"
version = "0.1.0"
description = "Stroboscopic 2D DIC pipeline for SWIM skin-surface wave measurements"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "SWIM Project" }
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.11",
  "matplotlib>=3.8",
  "opencv-python>=4.9",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "pyyaml>=6.0",
  "pandas>=2.1",
  "tqdm>=4.66",
  "numba>=0.59",
  "cupy>=13.0",

]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[project.scripts]
swim-dic = "dic.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["dic*"]
